# sprakbanken-nb-g2p

./: .gitignore  DEVELOPMENT.md  LESMEG.md  README.md  evaluate.py  pyproject.toml
src/nb_g2p/: utils.py
tests/utils/: test_utils.py
